# SolBridXML2MQTT

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  install.sh  setup-service.sh  solbridxml2mqtt.service  uninstall.sh
src/: main.rs
