[package]
name = "SolBridXML2MQTT"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8.2"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
rumqttc = "0.24"
toml = "0.9.8"

[profile.release]
lto = true